--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,6 +2,12 @@
 
 <% if !params[:author].blank? %>
   <% @posts = Post.where(author: params[:author]) %>
+  <% elsif !params[:date].blank? %>
+  <% if params[:date] == "Today" %>
+    <% @posts = Post.where("created_at >=?", Time.zone.today.beginning_of_day) %>
+  <% else %>
+    <% @posts = Post.where("created_at <?", Time.zone.today.beginning_of_day) %>
+  <% end %>
 <% end %>
 
 <div>
@@ -9,7 +15,6 @@
   <%= form_tag("/posts", method: "get") do %>
     <%= select_tag "author", options_from_collection_for_select(Author.all, "id", "name"), include_blank: true %>
     <%= select_tag "date", options_for_select(["Today", "Old News"]), include_blank: true %>
-
     <%= submit_tag "Filter" %>
   <% end %>
 </div>
